--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <nav class="navbar">
          <div class="max-width">
             <div class="logo">
-               <a href="#">Portfo<span>lio.</span>
+               <a href="#">My Portfo<span>lio.</span>
                </a>
             </div>
             <ul class="menu">
@@ -68,10 +68,10 @@
       <!-- About section start -->
       <section class="about" id="about">
          <div class="max-width">
-            <h2 class="title fadein">About me</h2>
+            <h2 class="title fadein">ABOUT ME</h2>
             <div class="about-content">
                <div class="column left">
-                  <img src="images/Chetan Nada.jpg" alt="Govardhan Guduri">
+                  <img src="images/Govardhan.jpg" alt="Govardhan Guduri">
                   <div>
                      <div class="wrapper">
                         <div class="button1">
@@ -118,7 +118,7 @@
       <!-- Skills section start -->
       <section class="skills" id="skills">
          <div class="max-width">
-            <h2 class="title fadein">My skills</h2>
+            <h2 class="title fadein">MY SKILLS</h2>
             <div class="skills-content">
                <div class="column left">
                   <div class="text">My creative skills & experiences</div>
@@ -193,7 +193,7 @@
                <div class="card">
                   <a href="https://chetannada.github.io/FirstReactApp" target="_blank">
                      <div class="box">
-                        <img src="./images/Avatar API.jpg" alt="Avatar API">
+                        <img src="./images/shopping.jpg" alt="Avatar API">
                         <p>Avatar of Developers</p>
                         <p>React.js, Webpack</p>
                      </div>
@@ -206,7 +206,7 @@
       <!-- Contact section start -->
       <section class="contact" id="contact">
          <div class="max-width">
-            <h2 class="title fadein">Contact me</h2>
+            <h2 class="title fadein">CONTACT ME</h2>
             <div class="contact-content">
                <div class="column left">
                   <div class="text">Reach Out to me!</div>
